# NumOpt

./: .gitignore  README.md  pyproject.toml
NumOpt/: OptimizationProblem.py  backtracking.py  functions.py  gradient.py  linesearch.py  post_processing.py  styles.py
NumOpt.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: 4-10.ipynb  4-15.ipynb  4-16.ipynb  4-19.ipynb  example_4-10.ipynb  example_4-19.ipynb  exercise_4-10.ipynb  exercise_4-7.ipynb
notebooks/ch04/: example_4-15.ipynb  example_4-16.ipynb  exercise_4-10.ipynb  exercise_4-11.ipynb  exercise_4-8.ipynb
notebooks/ch05/: example_5-26.ipynb  exercise_5-11.ipynb  exercise_5-7.ipynb  exercise_5-8.ipynb  exercise_5-9.ipynb
notebooks/ch06/: exercise_6-3.ipynb  exercise_6-5.ipynb
notebooks/ch06/exercise_6-7/: compute_derivatives.ipynb  truss.py
